[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://media/main_menu_background.png" type="Texture" id=2]
[ext_resource path="res://media/fonts/SourceCodePro-Black.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://media/fonts/SourceCodePro-Light.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://media/fonts/SourceCodePro-Regular.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 110
outline_size = 7
outline_color = Color( 0.65098, 0.168627, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 38
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="PlayButton" type="Button" parent="."]
margin_left = 560.0
margin_top = 750.0
margin_right = 1340.0
margin_bottom = 860.0
custom_fonts/font = SubResource( 1 )
text = "PLAY"

[node name="CreditsButton" type="Button" parent="."]
margin_left = 560.0
margin_top = 940.0
margin_right = 1340.0
margin_bottom = 1050.0
custom_fonts/font = SubResource( 1 )
text = "CREDITS"

[node name="Label3" type="Label" parent="."]
margin_left = 60.0
margin_top = 170.0
margin_right = 1908.0
margin_bottom = 340.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Retro Adventures of the Dead"

[node name="CreditsPanel" type="Panel" parent="."]
visible = false
margin_left = 30.0
margin_top = 30.0
margin_right = 1890.0
margin_bottom = 1060.0

[node name="CloseButton" type="Button" parent="CreditsPanel"]
margin_left = 710.0
margin_top = 890.0
margin_right = 1110.0
margin_bottom = 1000.0
custom_fonts/font = SubResource( 1 )
text = "CLOSE"

[node name="Label" type="Label" parent="CreditsPanel"]
margin_left = 50.0
margin_top = 30.0
margin_right = 761.0
margin_bottom = 781.0
custom_fonts/font = SubResource( 3 )
text = "Team:
>Alec Santos
Director, Game Designer,
Programmer

>Sarah Grimes
2D Artist

>Gabriel Fischer
Music Composer

>Carlos Marques
Level Designer, Game Designer,
Programmer"

[node name="Label2" type="Label" parent="CreditsPanel"]
margin_left = 760.0
margin_top = 80.0
margin_right = 1850.0
margin_bottom = 890.0
custom_fonts/font = SubResource( 3 )
text = "Assets:
>2D Art:
-ansimuz
-GrafxKid
-greggman
-Jetrel
>Music and sound effects:
-HydroGene
-LittleRobotSoundFactory
-Muncheybobo
-SubspaceAudio
-Zydro
(License details on project source code: https://github.com/GamuxUnicamp/Gaminp-Jam-2019)"
autowrap = true
